add win 10 vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,7 @@
 {
     "files.associations": {
         "vector": "cpp",
-        "random": "cpp",
-        "map": "cpp",
-        "utility": "cpp"
+        "random": "cpp"
     },
-    "C_Cpp.default.compilerPath": "/usr/local/Cellar/gcc@9/9.3.0/bin/g++-9"
+    "code-runner.runInTerminal": true
 }
