--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,7 +85,17 @@
         "ranges": "cpp",
         "__config": "cpp",
         "__nullptr": "cpp",
-        "locale": "cpp"
+        "locale": "cpp",
+        "__locale": "cpp",
+        "__string": "cpp",
+        "__debug": "cpp",
+        "__functional_03": "cpp",
+        "__functional_base": "cpp",
+        "__threading_support": "cpp",
+        "compare": "cpp",
+        "ios": "cpp",
+        "variant": "cpp",
+        "stop_token": "cpp"
     },
     "code-runner.runInTerminal": true
 }
