add leetcode contest 289

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,7 +95,12 @@
         "compare": "cpp",
         "ios": "cpp",
         "variant": "cpp",
-        "stop_token": "cpp"
+        "stop_token": "cpp",
+        "__errc": "cpp",
+        "__tuple": "cpp",
+        "bit": "cpp",
+        "concepts": "cpp",
+        "numbers": "cpp"
     },
     "code-runner.runInTerminal": true
 }
