--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,14 +31,14 @@
         {
             "label": "win10-compile-cpp", // 任务名称，与launch.json的preLaunchTask相对应
             "type": "shell", // process是vsc把预定义变量和转义解析后直接全部传给command；shell相当于先打开shell再输入命令，所以args还会经过shell再解析一遍
-            "command": "D:\\mingw64\\bin\\g++.exe", // 要使用的编译器，C++用g++
+            "command": "g++.exe", // 要使用的编译器，C++用g++
             "args": [
                 "-g",
                 "${file}",
                 "-I./include/",
                 "-o",
                 // "${fileDirname}/${fileBasenameNoExtension}.out",
-                "${workspaceFolder}\\tmp.exe",
+                "tmp/tmp.exe",
                 // "-std=c++17"
             ],       
             "group": {
