--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,12 +32,12 @@
             "program": "${workspaceFolder}/tmp/tmp.exe", // 将要进行调试的程序的路径 ${fileDirname}/${fileBasenameNoExtension}.out
             "args": [], // 程序调试时传递给程序的命令行参数，一般设为空即可
             // "stopAtEntry": false, // 设为true时程序将暂停在程序入口处，相当于在main上打断点
-            "cwd": "${workspaceFolder}/", // 调试程序时的工作目录，此为工作区文件夹；改成${fileDirname}可变为文件所在目录 ${workspaceFolder}
+            "cwd": "${workspaceFolder}/tmp/", // 调试程序时的工作目录，此为工作区文件夹；改成${fileDirname}可变为文件所在目录 ${workspaceFolder}
             // "environment": [], // 环境变量
             // "externalConsole": false, // 为true时使用单独的cmd窗口，与其它IDE一致；18年10月后设为false可调用VSC内置终端
             // "MIMode": "lldb", // 指定连接的调试器，可以为gdb或lldb。
             "preLaunchTask": "mac-cpp", // 调试会话开始前执行的任务，一般为编译程序。与tasks.json的label相对应
-            "console": "internalConsole"
+            // "console": "internalConsole"
             // "internalConsoleOptions": "neverOpen", // 如果不设为neverOpen，调试时会跳到“调试控制台”选项卡
             // "showDisplayString": false,
             // "logging": {
