--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,9 @@
                 "-DUSACO_LOCAL_JUDGE",
                 "-o",
                 "${workspaceFolder}/tmp/tmp.exe",
-                "-std=c++17"
+                "-std=c++17",
+                "-Wall",
+                "-Werror"
             ],
             "options": {
                 "cwd": "${fileDirname}"
@@ -119,6 +121,8 @@
                 "-o",
                 "${workspaceFolder}/tmp/tmp.exe",
                 "-std=c++20",
+                "-Wall",
+                "-Werror"
             ],
             "options": {
                 "cwd": "${fileDirname}", // The current working directory of the executed program or script. If omitted Code's current workspace root is used.
