--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -145,7 +145,7 @@
     "C_Cpp.inlayHints.autoDeclarationTypes.enabled": true,
     "C_Cpp.inlayHints.parameterNames.suppressWhenArgumentContainsName": false,
     "editor.semanticTokenColorCustomizations": {},
-    "workbench.colorTheme": "Dark",
+    "workbench.colorTheme": "Mermaid Dark",
     "C_Cpp.clang_format_fallbackStyle": "Google",
     "localaipilot.standalone.ollamaCodeModel": "qwen2.5-coder:7b",
     "localaipilot.general.inlineSuggestions": true,
