--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,7 +42,7 @@
       //internalConsole: Use VScode Debug Console for stdout and stderr. Stdin will be unavailable.
     },
     {
-      "name": "mac-Launch-cpp", // 配置名称，将会在启动配置的下拉菜单中显示
+      "name": "mac-Launch-cpp-debug", // 配置名称，将会在启动配置的下拉菜单中显示
       // "type": "cppdbg", // 配置类型，cppdbg 对应 cpptools 提供的调试功能；可以认为此处只能是cppdbg
       "type": "lldb",
       "request": "launch", // 请求配置类型，可以为launch（启动）或attach（附加）
@@ -54,7 +54,7 @@
       // "environment": [], // 环境变量
       // "externalConsole": false, // 为true时使用单独的cmd窗口，与其它IDE一致；18年10月后设为false可调用VSC内置终端
       // "MIMode": "lldb", // 指定连接的调试器，可以为gdb或lldb。
-      "preLaunchTask": "mac-cpp" // 调试会话开始前执行的任务，一般为编译程序。与tasks.json的label相对应
+      "preLaunchTask": "mac-cpp-debug" // 调试会话开始前执行的任务，一般为编译程序。与tasks.json的label相对应
       // "console": "internalConsole"
       // "internalConsoleOptions": "neverOpen", // 如果不设为neverOpen，调试时会跳到“调试控制台”选项卡
       // "showDisplayString": false,
@@ -71,7 +71,7 @@
       // "MIMode": "lldb"
     },
     {
-      "name": "mac-Launch-cpp-no-debug", // 配置名称，将会在启动配置的下拉菜单中显示
+      "name": "mac-Launch-cpp-nodebug", // 配置名称，将会在启动配置的下拉菜单中显示
       // "type": "cppdbg", // 配置类型，cppdbg 对应 cpptools 提供的调试功能；可以认为此处只能是cppdbg
       "type": "lldb",
       "request": "launch", // 请求配置类型，可以为launch（启动）或attach（附加）
@@ -83,7 +83,7 @@
       // "environment": [], // 环境变量
       // "externalConsole": false, // 为true时使用单独的cmd窗口，与其它IDE一致；18年10月后设为false可调用VSC内置终端
       // "MIMode": "lldb", // 指定连接的调试器，可以为gdb或lldb。
-      "preLaunchTask": "mac-cpp-no-debug" // 调试会话开始前执行的任务，一般为编译程序。与tasks.json的label相对应
+      "preLaunchTask": "mac-cpp-nodebug" // 调试会话开始前执行的任务，一般为编译程序。与tasks.json的label相对应
       // "console": "internalConsole"
       // "internalConsoleOptions": "neverOpen", // 如果不设为neverOpen，调试时会跳到“调试控制台”选项卡
       // "showDisplayString": false,
